# postgres-scout

./: .gitignore  LICENSE  Makefile  README.md
doc/: build-and-run.md  registry.md  testing.md
src-tauri/: Cargo.toml  Dockerfile  Dockerfile.debian  README.Docker.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  helperlib.rs  main.rs  util.rs
ui/: backend_adapter_db.js  bridge_frontend_backend.js  common_ui.js  component_db_breadcrumbs.js  component_db_browser.js  component_db_concheck.js  component_db_maintable.js  hints.js  index.html  main.js  navigation.js  registry.js  style.css
