[package]
name = "postgres-scout"
version = "0.1.0"
description = "a tauri-based postgres viewer"
authors = ["Thomas Stegmaier"]
license = ""
repository = ""
default-run = "postgres-scout"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["process-exit"] }
tokio-postgres = "0.7.11"
tokio = { version = "1.29.1", features = ["macros"] }
whoami = "1.5.1"
tokio-util = "0.7.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
